--- a/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
+++ b/src/app/pages/comportamento-oponente/comportamento-oponente.page.html
@@ -1,44 +1,56 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>comportamento_oponente</ion-title>
+    <ion-title>Comportamento do oponente</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> 
 
 <ion-content>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Conservadora</ion-label>
-     <ion-label slot="end">Ousada</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentConservadora($event)">
+      <ion-label slot="start">Conservadora</ion-label>
+      <ion-label slot="end">Ousada</ion-label>
     </ion-range>
+     <ion-icon name="help" (click)="help(conservadora)"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Inconstante</ion-label>
-     <ion-label slot="end">Constante</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentInconstante($event)">
+      <ion-label slot="start">Inconstante</ion-label>
+      <ion-label slot="end">Constante</ion-label>
     </ion-range>
+    <ion-icon name="help" (click)="help(inconstante)"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Inseguro</ion-label>
-     <ion-label slot="end">Confiante</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentInseguro($event)">
+      <ion-label slot="start">Inseguro</ion-label>
+      <ion-label slot="end">Confiante</ion-label>
     </ion-range>
+    <ion-icon name="help" (click)="help(inseguro)"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Pressionado</ion-label>
-     <ion-label slot="end">Controlado</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentPressionado($event)">
+      <ion-label slot="start">Pressionado</ion-label>
+      <ion-label slot="end">Controlado</ion-label>
     </ion-range>
+    <ion-icon name="help" (click)="help(pressionado)"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Provocativa</ion-label>
-     <ion-label slot="end">Respeitosa</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentProvocativa($event)">
+      <ion-label slot="start">Provocativa</ion-label>
+      <ion-label slot="end">Respeitosa</ion-label>
     </ion-range>
+    <ion-icon name="help" (click)="help(provocativa)"></ion-icon>
   </ion-item>
   <ion-item>
-    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="altura($event)">
-     <ion-label slot="start">Passiva</ion-label>
-     <ion-label slot="end">Ativa</ion-label>
+    <ion-range min="1" max="3" step="1" snaps="true" color="secondary" (ionChange)="segmentPassiva($event)">
+      <ion-label slot="start">Passiva</ion-label> 
+      <ion-label slot="end">Ativa</ion-label>
     </ion-range>
+    <ion-icon name="help" (click)="help(passiva)"></ion-icon>
   </ion-item>
+
+  <ion-button (click)="concluir()" expand="block">
+    <!-- [disabled]="!valido"> -->
+    Confirma
+  </ion-button>
+ 
 </ion-content>
