--- a/src/app/pages/minhas-lutas/minhas-lutas.page.html
+++ b/src/app/pages/minhas-lutas/minhas-lutas.page.html
@@ -3,7 +3,7 @@
       <ion-button shape="round" (click)="voltar()">
         <ion-icon name="arrow-dropleft-circle"></ion-icon>
       </ion-button>
-      <ion-button shape="round" class="Filtro"(click)="presentAlert()">
+      <ion-button shape="round" class="Filtro"(click)="presentModal()">
         <ion-icon name="funnel"></ion-icon>
       </ion-button>
     </ion-toolbar> 
