--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -5,6 +5,7 @@
         <img id="fotoButton" src="" alt="">
       </ion-avatar>
   </div>
+
   
   <ion-button expand="block"  id="lut" (click)="novaLuta()">
     <img src="https://img.icons8.com/metro/26/000000/royal-marines.png">
@@ -14,6 +15,9 @@
     <img src="https://img.icons8.com/metro/26/000000/rules.png">
     Meus Jogos
   </ion-button> 
-  
+  <ion-button expand="block" (click)="estatistica()"  >
+    <ion-icon name="stats"></ion-icon>
+    Minhas estatisticas
+  </ion-button> 
 </ion-content>
 
