Ajustes navegação estatistica

--- a/src/app/pages/registra-lutadores/registra-lutadores.page.scss
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.scss
@@ -7,6 +7,9 @@ ion-avatar{
     border: 20px;
     border-color: blueviolet;
 }
+ion-segment-button{
+    --border-radius : 30px;
+}
 
 h3{
     margin-left: auto;
