--- a/src/app/pages/estatistica/estatistica.page.html
+++ b/src/app/pages/estatistica/estatistica.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-button shape="round" (click)="voltar()">
+      <ion-icon name="arrow-dropleft-circle"></ion-icon>
+    </ion-button>
     <ion-title>estatistica</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -23,5 +26,5 @@
     </ion-card-content>
   </ion-card>
 
- 
+
 </ion-content>
