--- a/src/app/pages/estatistica/estatistica.page.html
+++ b/src/app/pages/estatistica/estatistica.page.html
@@ -19,10 +19,19 @@
 
   <ion-card class="welcome-card">
     <ion-card-header>
-      <ion-card-title>Pontos</ion-card-title>
+      <ion-card-title>Pontos por tipo de ataque</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <canvas #barChart></canvas>
+      <canvas #barChartTipoAtaque></canvas>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card class="welcome-card">
+    <ion-card-header>
+      <ion-card-title>Pontos por local do corpo</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #barChartLocalCorpo></canvas>
     </ion-card-content>
   </ion-card>
 
