--- a/src/app/pages/registra-lutadores/registra-lutadores.page.scss
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.scss
@@ -8,7 +8,21 @@ ion-avatar{
     border-color: blueviolet;
 }
 ion-segment-button{
-    --border-radius : 30px;
+    --border-radius : 30px 30px ;
+    --border-color: var(--ion-color-primary);
+    --background-checked: var(--ion-color-primary);
+    width: 30px;
+    --indicator-height: 0px;
+    --border-style: solid ;
+    --color-checked: white;
+    --border-width: 1px;
+    --padding-color: var(--ion-color-primary);
+    --margin-color: var(--ion-color-primary);
+    --indicator-color: var(--ion-color-primary);
+
+}
+ion-header{
+    background-color: var(--ion-color-primary);
 }
 
 h3{
